Adding Quiz Logic

--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>My Github</title>
-    </head>
-    <body>
-        <div id="app"></div>
-        <script type="text/javascript" src="js/main.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>ReactQuiz</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css" media="screen" title="no title">
+    <link rel="stylesheet" href="./css/style.css" media="screen" title="no title">
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>React Quiz</h1>
+                <p class="lead">A simple quiz application written in React.js</p>
+                <hr />
+                <div id="app"></div>
+            </div>
+        </div>
+    </div>
+    
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Written by <a href="https://github.com/magicolala/reactquiz">Cédric Oloa</a></p>
+      </div>
+    </footer>
+
+    <script type="text/javascript" src="js/main.js"></script>
+</body>
 </html>
